# rust_tools

./: .gitignore  Cargo.toml  LICENSE  README.md  run
.github/workflows/: build.yml
aes/: Cargo.toml  README.md  test
aes/src/: aes.js  friendly.rs  main.rs
aes/tst/: sample.md
docs/: Plan.md  Research.md
episode-renamer/: Cargo.toml  README.md  actions-rust-cross-example.yaml
episode-renamer/src/: main.rs
episode-renamer/tst/: Sample.tsv
src/: format_string.rs  main.rs  tsv.rs
